# datalar

./: .coverage  ex.json  pyproject.toml
datalar/scrapers/: interfaces.py  schemas.py
datalar/scrapers/zap_imoveis/: scrapper.py
datalar/scrapers/zap_imoveis/sdk/: __init__.py  schemas.py  sdk.py
datalar/scrapers/zap_imoveis/sdk/routes/: base.py  listings.py
tests/scrappers/zap_imoveis/sdk/: test_schemas.py  test_sdk.py
tests/scrappers/zap_imoveis/sdk/routes/: test_base.py  test_listing.py
